--- a/Online Exam System/Views/Account/Login.cshtml
+++ b/Online Exam System/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-md-6 offset-3">
         <p>
-            <h4>Log in to your account</h4>
+            <h4 class="alert alert-primary" role="alert">Log in to your account</h4>
         </p>
         @if (TempData["Error"] != null)
         {
@@ -16,21 +16,21 @@
                     <span><b>Sorry!</b> - @TempData["Error"]</span>
                 </div>
         }
-        <div class="row">
+        <div class="row p-3" style="background: #f4f4f4; border-radius: 15px">
             <div class="col-md-8 offset-2">
                 <form asp-action="Login">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="form-group">
+                    <div class="form-group m-3">
                         <label asp-for="EmailAddress" class="control-label"></label>
                         <input asp-for="EmailAddress" class="form-control">
                         <span asp-validation-for="EmailAddress" class="text-danger"></span>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group m-3">
                         <label asp-for="Password" class="control-label"></label>
                         <input asp-for="Password" class="form-control" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group d-flex justify-content-center gap-1">
                         <input class="btn btn-outline-success float right" type="submit" value="Log in" />
                         <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index">Cancel</a>
                     </div>
