--- a/Online Exam System/Views/Account/Register.cshtml
+++ b/Online Exam System/Views/Account/Register.cshtml
@@ -20,7 +20,7 @@
 
         <div class="row p-3" style="background: #f4f4f4; border-radius: 15px">
             <div class="col-md-8 offset-2">
-                <form asp-action="Register">
+                <form asp-action="Register" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="form-group m-3">
@@ -37,6 +37,11 @@
                         <label asp-for="ConfirmPassword" class="control-label"></label>
                         <input asp-for="ConfirmPassword" class="form-control" />
                         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    </div>
+                    <div class="form-group m-3">
+                        <label asp-for="ProfilePicture" class="control-label"></label>
+                        <input asp-for="ProfilePicture" type="file" class="form-control" />
+                        <span asp-validation-for="ProfilePicture" class="text-danger"></span>
                     </div>
 
                     <div class="form-group d-flex justify-content-center gap-1">
