--- a/Online Exam System/Views/Student/ExamsHistory.cshtml
+++ b/Online Exam System/Views/Student/ExamsHistory.cshtml
@@ -2,7 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Title"] = "Create New User";
+    ViewData["Title"] = "Exams history";
 }
 
 <h1>History of all exams studnet take</h1>
