--- a/Online Exam System/Views/Student/Index.cshtml
+++ b/Online Exam System/Views/Student/Index.cshtml
@@ -10,6 +10,9 @@
 }
 
 <h1 class="text-center">Welcome, @userName</h1>
+<div class="mx-auto bg-dark border border-dark d-flex justify-content-center align-items-center" style="width: 100px; height: 100px;">
+	<img class="rounded-circle img-fluid" src="@Url.Action("GetProfilePicture", "Account", new { userId = currentUser.Id })" alt="Profile Picture" style="height: 100px; width: 100px;" />
+</div>
 <div class="row text-center mt-5 gap-5 justify-content-center">
 	<div class="col-sm-3 col-12 border border-light-subtle p-5">
 		<h3>you can take your exams by pressing the below button</h3>
@@ -17,10 +20,10 @@
 	</div>
 	<div class="col-sm-3 col-12 border border-light-subtle p-5">
 		<h3>you can see all the exams you took by pressing below button</h3>
-		<a type="button" class="btn btn-primary mt-3" asp-area="" asp-controller="student" asp-action="ExamsHistory">Current users</a>
+		<a type="button" class="btn btn-primary mt-3" asp-area="" asp-controller="Student" asp-action="ExamsHistory">Exams History</a>
 	</div>
 	<div class="col-sm-3 col-12 border border-light-subtle p-5">
 		<h3>you can change your information by pressing below button</h3>
-		<a type="button" class="btn btn-primary mt-3" asp-area="" asp-controller="Studnet" asp-action="Settings">Settings</a>
+		<a type="button" class="btn btn-primary mt-3" asp-area="" asp-controller="Student" asp-action="Settings">Settings</a>
 	</div>
 </div>
