--- a/Online Exam System/Views/Student/TakeExam.cshtml
+++ b/Online Exam System/Views/Student/TakeExam.cshtml
@@ -2,7 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Title"] = "List of users";
+    ViewData["Title"] = "Start new exam";
 }
 
 <h1>This is page will be the place where the studnet put exam id to start exam</h1>
