--- a/Online Exam System/Views/Account/Login.cshtml
+++ b/Online Exam System/Views/Account/Login.cshtml
@@ -2,22 +2,20 @@
 @model LoginViewModel
 
 @{
-	ViewData["Title"] = "Login";
+    ViewData["Title"] = "Login";
 }
 
-<div class="row">
-    <div class="col-md-6 offset-3">
-        <p>
-            <h4 class="alert alert-primary" role="alert">Log in to your account</h4>
-        </p>
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <h4 class="alert alert-primary" role="alert">Log in to your account</h4>
         @if (TempData["Error"] != null)
         {
-                <div class="col-md-12 alert alert-danger">
-                    <span><b>Sorry!</b> - @TempData["Error"]</span>
-                </div>
+                    <div class="col-md-12 alert alert-danger">
+                        <span><b>Sorry!</b> - @TempData["Error"]</span>
+                    </div>
         }
-        <div class="row p-3" style="background: #f4f4f4; border-radius: 15px">
-            <div class="col-md-8 offset-2">
+        <div class="row p-3 justify-content-center" style="background: #f4f4f4; border-radius: 15px">
+            <div class="col-md-10">
                 <form asp-action="Login">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group m-3">
