--- a/Online Exam System/Views/Account/Register.cshtml
+++ b/Online Exam System/Views/Account/Register.cshtml
@@ -2,24 +2,21 @@
 @model RegisterViewModel
 
 @{
-	ViewData["Title"] = "Sign up";
+    ViewData["Title"] = "Sign up";
 }
 
-<div class="row">
-    <div class="col-md-6 offset-3">
-        <p>
+<div class="row justify-content-center">
+    <div class="col-md-6">
         <h4 class="alert alert-primary" role="alert">Sign up for a new account</h4>
-        </p>
-
         @if (TempData["Error"] != null)
         {
-                <div class="col-md-12 alert alert-danger">
-                    <span><b>Sorry!</b> - @TempData["Error"] </span>
-                </div>
+                    <div class="col-md-12 alert alert-danger">
+                        <span><b>Sorry!</b> - @TempData["Error"] </span>
+                    </div>
         }
 
-        <div class="row p-3" style="background: #f4f4f4; border-radius: 15px">
-            <div class="col-md-8 offset-2">
+        <div class="row p-3 justify-content-center" style="background: #f4f4f4; border-radius: 15px">
+            <div class="col-md-10">
                 <form asp-action="Register" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
