add admin settings page

--- a/Online Exam System/Views/Admin/Index.cshtml
+++ b/Online Exam System/Views/Admin/Index.cshtml
@@ -21,6 +21,6 @@
 	</div>
 	<div class="col-sm-3 col-12 border border-light-subtle p-5">
 		<h3>you can change your information by pressing below button</h3>
-		<a type="button" class="btn btn-primary mt-3" asp-area="" asp-controller="Admin" asp-action="Settings">Settings</a>
+		<a type="button" class="btn btn-primary mt-3" asp-area="" asp-controller="Admin" asp-action="Settings" asp-route-id=@currentUser.Id>Settings</a>
 	</div>
 </div>
