--- a/Online Exam System/Views/Shared/_Layout.cshtml
+++ b/Online Exam System/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-							</li>
+						</li>
 						}
 						else
 						{
@@ -51,6 +51,12 @@
 							{
 								<li>
 									<a class="nav-link" asp-area="" asp-controller="Student" asp-action="Index">Control Panel</a>
+								</li>
+							}
+							else
+							{
+								<li>
+									<a class="nav-link" asp-area="" asp-controller="Instructor" asp-action="Index">Control Panel</a>
 								</li>
 							}
 							<li class="nav-item ms-auto">
