--- a/Online Exam System/Views/Instructor/CurrentExams.cshtml
+++ b/Online Exam System/Views/Instructor/CurrentExams.cshtml
@@ -7,6 +7,13 @@
 
 <h1>Current Exams</h1>
 
+@if (TempData["Error"] != null)
+{
+    <div class="col-md-12 alert alert-danger">
+        <span><b>Sorry!</b> - @TempData["Error"] </span>
+    </div>
+}
+
 <table class="table table-striped">
     <thead>
         <tr>
