--- a/Online Exam System/Views/Account/Register.cshtml
+++ b/Online Exam System/Views/Account/Register.cshtml
@@ -22,8 +22,13 @@
 
                     <div class="form-group m-3">
                         <label asp-for="EmailAddress" class="control-label"></label>
-                        <input asp-for="EmailAddress" class="form-control" />
+                        <input asp-for="EmailAddress" type="email" class="form-control" />
                         <span asp-validation-for="EmailAddress" class="text-danger"></span>
+                    </div>
+                    <div class="form-group m-3">
+                        <label asp-for="Name" class="control-label"></label>
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group m-3">
                         <label asp-for="Password" class="control-label"></label>
