--- a/Online Exam System/Views/Instructor/AddOptions.cshtml
+++ b/Online Exam System/Views/Instructor/AddOptions.cshtml
@@ -5,6 +5,7 @@
 <div class="row justify-content-center">
     <div class="col-md-6">
         <h4 class="alert alert-primary" role="alert">Add Options</h4>
+        <p class="alert alert-primary" role="alert"></p>
         @if (TempData["Error"] != null)
         {
                     <div class="col-md-12 alert alert-danger">
@@ -16,12 +17,12 @@
             <div class="col-md-10">
                 <form asp-action="AddOptions">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    @for (var i = 0; i < Model.options.Count; i++)
+                    @for (var i = 0; i < Model.Options.Count; i++)
                     {
                         <div class="form-group m-3">
-                            <label asp-for="options[i].OptionText" class="control-label"></label>
-                            <input asp-for="options[i].OptionText" class="form-control" />
-                            <span asp-validation-for="options[i].OptionText" class="text-danger"></span>
+                            <label asp-for="Options[i].OptionText" class="control-label"></label>
+                            <input asp-for="Options[i].OptionText" class="form-control" />
+                            <span asp-validation-for="Options[i].OptionText" class="text-danger"></span>
                         </div>
                     }
                     <div class="form-group m-3">
