--- a/Online Exam System/Views/Instructor/CurrentExams.cshtml
+++ b/Online Exam System/Views/Instructor/CurrentExams.cshtml
@@ -42,14 +42,19 @@
                     <td>@item.ExamPoints</td>
                     <td>@item.StartTime</td>
                     <td>
-                        <span class="badge bg-info">@(Model.ExamQuestionsPointSum[item.ExamID] < item.ExamPoints || Model.isNotCompleted ? "Not Completed" : "Completed")</span>
+                        <span class="badge bg-info">@(Model.ExamQuestionsPointSum[item.ExamID] < item.ExamPoints || Model.IsNotCompleted ? "Not Completed" : "Completed")</span>
                     </td>
                     <td>@Model.ExamQuestionCounts[item.ExamID]</td>
                     <td>@Model.ExamQuestionsPointSum[item.ExamID]</td>
                     <td>
-                        @if (Model.ExamQuestionsPointSum[item.ExamID] != item.ExamPoints)
+                        @{
+                            if (Model.ExamQuestionsPointSum[item.ExamID] != item.ExamPoints)
                         {
-                            <a asp-action="AddQuestionForm" asp-controller="Instructor" asp-route-id=@item.ExamID type="button" class="btn btn-success btn-sm">Add question</a>
+                                <a asp-action="AddQuestionForm" asp-controller="Instructor" asp-route-id=@item.ExamID type="button" class="btn btn-success btn-sm">Add question</a>
+                            }else
+                            {
+                                <a asp-action="Stats" asp-controller="Instructor" asp-route-id=@item.ExamID type="button" class="btn btn-warning btn-sm">Stats</a>
+                            }
                         }
                         <a asp-action="CurrentQuestion" asp-controller="Instructor" asp-route-id=@item.ExamID type="button" class="btn btn-success btn-sm">Current questions</a>
                         <a asp-action="EditExam" asp-controller="Instructor" asp-route-id=@item.ExamID type="button" class="btn btn-primary btn-sm">Edit</a>
