--- a/Online Exam System/Views/Student/Exam.cshtml
+++ b/Online Exam System/Views/Student/Exam.cshtml
@@ -15,6 +15,14 @@
 		</div>
 	</div>
 </div>
+
+@if (TempData["Error"] != null)
+{
+	<div class="col-md-12 alert alert-danger">
+		<span><b>Sorry!</b> - @TempData["Error"] </span>
+	</div>
+}
+
 <form asp-action="Exam">
 	<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 	<input type="hidden" asp-for="InstructorName" value="@Model.InstructorName" />
